# state_pattern

./: CMakeLists.txt  context.cpp  context.hpp  main.cpp  state.cpp  state.hpp  state_awaiting_coins.cpp  state_awaiting_coins.hpp  state_base.cpp  state_base.hpp  state_idle.cpp  state_idle.hpp
